<resources>
    <string name="app_name">Marvel Characters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="character_name">Character Name</string>
    <string name="description">Description</string>
    <string name="character_description">Character description</string>
    <string name="comics">Comics</string>
    <string name="character_comics">Character comics</string>
    <string name="stories">Stories</string>
    <string name="character_stories">Character stories</string>
    <string name="iron_man">Iron Man</string>
    <string name="n_comics">N. Comics:</string>
    <string name="default_n_elements">0</string>
    <string name="events">Events</string>
    <string name="character_events">Character events</string>
    <string name="series">Series</string>
    <string name="character_series">Character series</string>
    <string name="n_stories">N. Stories:</string>
    <string name="n_events">N. Events:</string>
    <string name="n_series">N. Series:</string>
    <string name="last_updated">Last updated:</string>
    <string name="last_update_format">MMM dd yyyy</string>
</resources>