<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/characters_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/character_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="15dp"
        android:elevation="2dp"
        app:cardUseCompatPadding="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.57"
                />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.36"
                />

            <ImageView
                android:id="@+id/character_photo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/gl2"
                android:src="@drawable/ic_android_black_24dp"
                />

            <TextView
                android:id="@+id/character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/character_photo"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:text="@string/character_name" />

            <TextView
                android:id="@+id/character_name_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/character_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="5dp"
                android:text="@string/iron_man"
                android:lines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/n_comics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/character_name"
                app:layout_constraintStart_toEndOf="@id/character_photo"
                android:textStyle="bold"
                android:text="@string/n_comics" />

            <TextView
                android:id="@+id/n_comics_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/character_name_value"
                app:layout_constraintStart_toEndOf="@id/n_comics"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="5dp"
                android:text="@string/default_n_elements"
                android:lines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/n_stories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/n_comics"
                app:layout_constraintStart_toEndOf="@id/character_photo"
                android:textStyle="bold"
                android:text="@string/n_stories" />

            <TextView
                android:id="@+id/n_stories_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/n_comics"
                app:layout_constraintStart_toEndOf="@id/n_stories"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="5dp"
                android:text="@string/default_n_elements"
                android:lines="1"
                android:ellipsize="end"/>


            <TextView
                android:id="@+id/n_events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/n_stories"
                app:layout_constraintStart_toEndOf="@id/character_photo"
                android:textStyle="bold"
                android:text="@string/n_events" />

            <TextView
                android:id="@+id/n_events_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/n_stories"
                app:layout_constraintStart_toEndOf="@id/n_events"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="5dp"
                android:text="@string/default_n_elements"
                android:lines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/n_series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/n_events"
                app:layout_constraintStart_toEndOf="@id/character_photo"
                android:textStyle="bold"
                android:text="@string/n_series" />

            <TextView
                android:id="@+id/n_series_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/n_events"
                app:layout_constraintStart_toEndOf="@id/n_stories"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="5dp"
                android:text="@string/default_n_elements"
                android:lines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/last_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/n_series"
                app:layout_constraintStart_toEndOf="@id/character_photo"
                android:textStyle="bold"
                android:text="@string/last_updated" />

            <TextView
                android:id="@+id/last_updated_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/n_series"
                app:layout_constraintStart_toEndOf="@id/last_updated"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="5dp"
                android:text="@string/last_update_format"
                android:lines="1"
                android:ellipsize="end"/>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>