<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CharacterDetailsFragment">

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/character_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.36"/>

            <ImageView
                android:id="@+id/characterPhoto"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/gl1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_android_black_24dp"/>

            <TextView
                android:id="@+id/characterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/gl1"
                app:layout_constraintBottom_toTopOf="@id/gl2"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/character_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:lines="1"
                android:ellipsize="end"
                android:elevation="1dp" />

            <View
                android:id="@+id/viewBackColor"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/gl1"
                app:layout_constraintBottom_toTopOf="@id/gl2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/colorAccent"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/characterName"
                app:layout_constraintTop_toBottomOf="@id/gl2"
                android:text="@string/description"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/descriptionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintStart_toStartOf="@id/description"
                android:text="@string/character_description"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/comics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/characterName"
                app:layout_constraintTop_toBottomOf="@id/descriptionValue"
                android:text="@string/comics"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/comicValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/comics"
                app:layout_constraintStart_toStartOf="@id/comics"
                android:text="@string/character_comics"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/stories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/characterName"
                app:layout_constraintTop_toBottomOf="@id/comicValue"
                android:text="@string/stories"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/storiesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/stories"
                app:layout_constraintStart_toStartOf="@id/stories"
                android:text="@string/character_stories"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/characterName"
                app:layout_constraintTop_toBottomOf="@id/storiesValue"
                android:text="@string/stories"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/eventsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/events"
                app:layout_constraintStart_toStartOf="@id/events"
                android:text="@string/character_stories"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/characterName"
                app:layout_constraintTop_toBottomOf="@id/eventsValue"
                android:text="@string/stories"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/seriesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/series"
                app:layout_constraintStart_toStartOf="@id/series"
                android:text="@string/character_stories"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>